# blackhole_hpc

./: .dockerignore  README.md
bench/: analizar_benchmark.py  bench_gpu_imagen.sh  bench_gpu_video.sh  bench_omp_imagen.sh  bench_omp_video.sh  bench_serial_imagen.sh  bench_serial_video.sh  make_video.sh  make_video_gpu.sh
common/: geodesic.h  geodesic3d.h  scene_config.h  test_bcrit  test_bcrit.cpp
cpu_omp/: CMakeLists.txt  main.cpp  omp_main  render3d_omp.cpp  render_video.cpp
cpu_serial/: CMakeLists.txt  main.cpp  render3d_serial.cpp  render_video.cpp
gpu_vulkan/: CMakeLists.txt  main.cpp  main3d.cpp  render3d  render3d_omp  render3d_test.cpp
gpu_vulkan/shaders/: geodesic.comp  geodesic.spv  geodesic3d.comp  geodesic3d.spv
infra/: README.md  docker-compose.yml
infra/docker/: Dockerfile.cpu_omp  Dockerfile.cpu_serial  Dockerfile.gpu_vulkan
infra/scheduler/: bench_docker.sh  jobs.txt  run_jobs.sh
results/: omp_image.ppm
results/analisis/: promedios.csv  tabla_resumen.md
results/csv/: gpu_imagen.csv  gpu_video.csv  omp_imagen.csv  omp_video.csv  omp_video_1h.csv  serial_imagen.csv  serial_video.csv
results/csv_etapa_actual/: docker_bench_imagen.csv  docker_bench_video.csv
scenes/: default.txt  scene1.txt
